# tangband

./: Build-Windows-Release-Package.ps1  Makefile.am  configure.ac  readme.md  readme.txt
Tangband/: Tangband.sln
Tangband/Tangband/: Tangband.vcxproj
lib/edit/: BaseitemDefinitions.txt  ClassMagicDefinitions.txt  EgoDefinitions.txt  MonsterRaceDefinitions.txt
lib/edit/quests/: 001_ThievesHideout.txt  014_WargProblem.txt  034_DumpWitness.txt
lib/edit/towns/: 01_Outpost_Full.txt  02_Telmora.txt  03_Morivant.txt  04_Angwil.txt
lib/pref/: pref-opt.prf
src/: Makefile.am  main-win.cpp
src/artifact/: random-art-generator.cpp
src/io/: report.cpp
src/load/: load.cpp
src/main-win/: main-win-exception.cpp
src/mind/: mind-elementalist.cpp
src/monster-floor/: monster-death.cpp
src/net/: report-error.cpp
src/realm/: realm-demon.cpp
src/system/: angband-version.cpp  angband-version.h
src/term/: gameterm.cpp
src/view/: display-scores.cpp
